--- a/wercker.yml
+++ b/wercker.yml
@@ -7,9 +7,10 @@ build:
           git submodule update --init
     - jkawamoto/sphinx:
         basedir: docs
-        packages: sphinx-autobuild sphinxcontrib-napoleon -e git+https://github.com/snide/sphinx_rtd_theme#egg=sphinx_rtd_theme-master 
+        packages: sphinx-autobuild sphinxcontrib-napoleon -e git+https://github.com/snide/sphinx_rtd_theme#egg=sphinx_rtd_theme-master
     - samueldebruyn/minify:
         base_dir: docs/build/html
+        png: false
 deploy:
   steps:
     - jkawamoto/ghp-import:
