--- a/wercker.yml
+++ b/wercker.yml
@@ -11,8 +11,10 @@ build:
     - samueldebruyn/minify:
         base_dir: docs/build/html
         png: false
+        js: false
 deploy:
   steps:
     - jkawamoto/ghp-import:
         token: $GIT_TOKEN
         basedir: docs/build/html
+        baseurl: https://rgmining.github.io/synthetic/
