--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,11 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+cycler>=0.10.0            # via matplotlib
 dsargparse>=0.3.0
+matplotlib>=1.5.3
+numpy>=1.11.3             # via matplotlib
+pyparsing>=2.1.10         # via matplotlib
+python-dateutil>=2.6.0    # via matplotlib
+pytz>=2016.10             # via matplotlib
+six>=1.10.0               # via cycler, python-dateutil
