Migrate to poetry

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,9 @@ current_version = 0.9.3
 commit = True
 tag = True
 
-[bumpversion:file:README.md]
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:README.rst]
 
