Configure pre-commit, isort, flake8, and black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,21 @@ matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
+pre-commit = "^2.17.0"
+isort = "^5.10.1"
+flake8 = "^4.0.1"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+target-version = ['py39']
+line-length = 120
+
+[tool.isort]
+profile = "black"
+line_length = 120
+src_paths = ["synthetic", "tests"]
+
