--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ pre-commit = "^2.17.0"
 isort = "^5.10.1"
 flake8 = "^4.0.1"
 black = "^22.1.0"
+pytest = "^7.1.1"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -47,3 +49,5 @@ profile = "black"
 line_length = 120
 src_paths = ["synthetic", "tests"]
 
+[tool.pytest.ini_options]
+addopts = "--cov='synthetic' --cov-branch"
