--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,7 +7,8 @@ tag = True
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
+[bumpversion:file:synthetic/__init__.py]
+
 [bumpversion:file:README.rst]
 
 [bumpversion:file:docs/source/conf.py]
-
