--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,20 +27,20 @@ include = ["COPYING"]
 rgmining-synthetic-dataset = "synthetic.eval.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 matplotlib = "^3.5.1"
 numpy = "^1.22.3"
 click = "^8.0.4"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
 pre-commit = "^2.17.0"
 isort = "^5.10.1"
-flake8 = "^4.0.1"
+flake8 = "^6.0.0"
 black = "^22.1.0"
 pytest = "^7.1.1"
-pytest-cov = "^3.0.0"
-mypy = "^0.942"
+pytest-cov = "^4.0.0"
+mypy = "^0.991"
 pytest-mock = "^3.7.0"
 
 [build-system]
