--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ pytest = "^7.1.1"
 pytest-cov = "^4.0.0"
 mypy = "^0.991"
 pytest-mock = "^3.7.0"
+tox = "^4.2.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
