--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Natural Language :: English",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Topic :: Software Development :: Libraries",
     "Topic :: Scientific/Engineering :: Information Analysis"
 ]
@@ -84,4 +87,7 @@ module = "fraudar"
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
-addopts = "--cov='synthetic' --cov-branch"
+addopts = "--cov=synthetic --cov-branch --cov-report=term-missing --cov-report=xml"
+
+[tool.coverage.report]
+exclude_lines = ["\\.{3}"]
