--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries",
     "Topic :: Scientific/Engineering :: Information Analysis"
 ]
@@ -37,15 +38,23 @@ click = "^8.0.4"
 
 [tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
-pre-commit = "^2.17.0"
+pre-commit = "^3.7.0"
 isort = "^5.10.1"
-flake8 = "^6.0.0"
-black = "^22.1.0"
-pytest = "^7.1.1"
-pytest-cov = "^4.0.0"
-mypy = "^0.991"
+flake8 = "^7.0.0"
+black = "^24.3.0"
+pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
+mypy = "^1.9.0"
 pytest-mock = "^3.7.0"
 tox = "^4.2.6"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.2.6"
+sphinx-rtd-theme = "^2.0.0"
+sphinx-autobuild = "^2024.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
