fix: report test coverage only from main branch

--- a/.github/workflows/python-lib.yaml
+++ b/.github/workflows/python-lib.yaml
@@ -34,6 +34,7 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageLocations: coverage.xml:coverage.py
+        if: github.ref == 'refs/heads/main'
       - name: Build and release
         run: |
           poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
