--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,14 +49,12 @@ include = [ "COPYING" ]
 bump2version = "^1.0.1"
 pre-commit = "^4.1"
 pre-commit-uv = "^4.1.4"
-isort = "^5.10.1"
-flake8 = "^7.0.0"
-black = "^24.3.0"
 pytest = "^8.1.1"
 pytest-cov = "^5.0.0"
 mypy = "^1.9.0"
 pytest-mock = "^3.7.0"
 tox = "^4.2.6"
+ruff = "^0.11.0"
 
 [tool.poetry.group.docs]
 optional = true
@@ -66,14 +64,9 @@ sphinx = "^7.2.6"
 sphinx-rtd-theme = "^2.0.0"
 sphinx-autobuild = "^2024.2.4"
 
-[tool.black]
-target-version = [ 'py39' ]
+[tool.ruff]
+target-version = "py310"
 line-length = 120
-
-[tool.isort]
-profile = "black"
-line_length = 120
-src_paths = [ "synthetic", "tests" ]
 
 [tool.pytest.ini_options]
 addopts = "--cov=synthetic --cov-branch --cov-report=term-missing --cov-report=xml"
