--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,17 +11,19 @@ repos:
     rev: v0.10.0
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [ --fix ]
       - id: ruff-format
-  - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: "1.3.1"
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.15.0
     hooks:
-      - id: tox-ini-fmt
+      - id: mypy
+        args: [ ]
+        additional_dependencies: [ "click>=8.1",  "matplotlib>=3.10",  "numpy>=2.2" , "pytest>=8.1.1", "pytest-mock>=3.7.0" ]
   - repo: local
     hooks:
-      - id: tox
-        name: run tox
-        entry: poetry run tox
-        language: python
-        files: .py$
+      - id: pytest
+        name: Run pytest
+        entry: poetry run pytest
+        language: system
         pass_filenames: false
+        always_run: true
