--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,15 +1,12 @@
 name: Build and deploy docs to Pages
-
 on:
   push:
     tags:
       - "v*.*.*"
   workflow_dispatch:
-
 concurrency:
   group: "pages"
   cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,16 +15,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Install poetry
+        run: pipx install poetry
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-      - name: Install poetry
-        run: curl -sSL https://install.python-poetry.org | python -
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
+          python-version: "3.13"
+          cache: poetry
       - name: Install dependencies
         run: |
           sudo apt install graphviz
@@ -38,7 +32,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/build/html/
-
   deploy:
     needs: build
     permissions:
