--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,11 @@ repos:
       - id: mypy
         args: []
         additional_dependencies: ["click>=8.1", "matplotlib>=3.10", "numpy>=2.2", "pytest>=8.1.1", "pytest-mock>=3.7.0"]
+  - repo: https://github.com/python-poetry/poetry
+    rev: "2.1.1"
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
   - repo: local
     hooks:
       - id: pytest
